[workspace]
resolver = "2"
members = [
  "atspi",
	"atspi-proxies",
	"atspi-common",
  "atspi-connection",
]

[workspace.package]
authors = [
  "Michael Connor Buchan <mikey@blindcomputing.org>", 
  "Tait Hoyem <tait@tait.tech>", 
  "Alberto Tirla <albertotirla@gmail.com>", 
  "DataTriny <datatriny@gmail.com>", 
  "Luuk van der Duim <luukvanderduim@gmail.com>"
]

[workspace.dependencies]
zbus = "3.12.0"
tracing = "0.1.37"
enumflags2 = "0.7.7"
