[workspace]
resolver = "2"
members = ["atspi", "atspi-proxies", "atspi-common", "atspi-connection"]


[workspace.package]
description = "AT-SPI2 protocol implementation in Rust"
authors = ["Michael Connor Buchan <mikey@blindcomputing.org>", "Tait Hoyem <tait@tait.tech>", "Alberto Tirla <albertotirla@gmail.com>", "DataTriny <datatriny@gmail.com>", "Luuk van der Duim <luukvanderduim@gmail.com>"]
rust-version = "1.75.0"

[workspace.dependencies]
zbus = { version = "5.1", default-features = false }
tracing = "0.1.37"
enumflags2 = "0.7.7"

[profile.bench]
lto = true
codegen-units = 1
