[workspace]
  members  = [ "atspi", "atspi-common", "atspi-connection", "atspi-proxies" ]
  resolver = "2"


  [workspace.package]
    authors = [
      "Alberto Tirla <albertotirla@gmail.com>",
      "DataTriny <datatriny@gmail.com>",
      "Luuk van der Duim <luukvanderduim@gmail.com>",
      "Michael Connor Buchan <mikey@blindcomputing.org>",
      "Tait Hoyem <tait@tait.tech>"
    ]
    description = "AT-SPI2 protocol implementation in Rust"
    rust-version = "1.77.2"

  [workspace.dependencies]
    enumflags2 = "0.7.7"
    tracing    = "0.1.37"
    zbus       = { version = "5.5", default-features = false }

[profile.bench]
  codegen-units = 1
  lto           = true
