[package]
name = "atspi-codegen"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.9"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6.0"
zbus = { version = "3.0.0", default-features = false, features = ["xml", "tokio"] }

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.11"