[package]
name = "atspi-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = { version = "3.0.0", default-features = false, features = ["xml", "tokio"] }
serde = "1.0.0"
serde-xml-rs = "0.6.0"

