[package]
  categories             = [ "accessibility", "api-bindings" ]
  description            = "Primitive types used for sending and receiving Linux accessibility events."
  edition                = "2021"
  include                = [ "LICENSE-*", "README.md", "src/**/*", "xml/*" ]
  keywords               = [ "Accessibility", "Macros" ]
  license                = "Apache-2.0 OR MIT"
  name                   = "atspi-common"
  readme                 = "README.md"
  repository             = "https://github.com/odilia-app/atspi"
  rust-version.workspace = true
  version                = "0.9.0"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
  async-std = [ "zbus/async-io" ]
  default   = [ "async-std", "wrappers" ]
  tokio     = [ "zbus/tokio" ]
  wrappers  = [  ]

[dependencies]
  enumflags2           = "0.7.7"
  serde                = "1.0"
  static_assertions    = "1.1.0"
  zbus                 = { workspace = true, optional = true, default-features = false }
  zbus-lockstep        = { version = "0.5.0" }
  zbus-lockstep-macros = { version = "0.5" }
  zbus_names           = "4.0"
  zvariant             = { version = "5.1", default-features = false }

[dev-dependencies]
  assert_matches    = "1.5.0"
  atspi-connection  = { path = "../atspi-connection" }
  atspi-proxies     = { path = "../atspi-proxies" }
  rename-item       = "0.1.0"
  serde_plain       = "1.0.1"
  static_assertions = "1.1.0"
  tokio             = { version = "1", default-features = false, features = [ "macros",
      "rt-multi-thread",
  ] }
  tokio-stream      = { version = "0.1", default-features = false, features = [ "time",
  ] }
  tokio-test        = "0.4.2"
  zbus              = { workspace = true }
