[package]
name = "atspi-common"
version = "0.9.0"
edition = "2021"
readme = "README.md"
categories = ["accessibility", "api-bindings"]
keywords = ["Macros", "Accessibility"]
repository = "https://github.com/odilia-app/atspi"
description = "Primitive types used for sending and receiving Linux accessibility events."
license = "Apache-2.0 OR MIT"
include = ["src/**/*", "LICENSE-*", "README.md", "xml/*"]
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async-std"]
async-std = ["zbus/async-io"]
tokio = ["zbus/tokio"]

[dependencies]
enumflags2 = "0.7.7"
serde = "1.0"
static_assertions = "1.1.0"
zbus-lockstep = { path = "../../zbus-lockstep/zbus-lockstep/", version = "0.4.4" }
zbus-lockstep-macros = { path = "../../zbus-lockstep/zbus-lockstep-macros", version = "0.4.4" }
zbus_names = { version = "4.0", path = "../../zbus/zbus_names" }
zvariant = { version = "5.1", path = "../../zbus/zvariant/", default-features = false }
zbus = { workspace = true, optional = true, default-features = false }
derive_more = { version = "1.0.0", features = ["from", "into"] }

[dev-dependencies]
atspi-connection = { path = "../atspi-connection" }
atspi-proxies = { path = "../atspi-proxies" }
rename-item = "0.1.0"
serde_plain = "1.0.1"
static_assertions = "1.1.0"
tokio-stream = { version = "0.1", default-features = false, features = ["time"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.2"
zbus = { workspace = true }
assert_matches = "1.5.0"
