[package]
categories             = ["accessibility"]
description            = "A method of connecting, querying, sending and receiving over AT-SPI."
edition                = "2021"
include                = ["LICENSE-*", "README.md", "src/**/*"]
keywords               = ["a11y", "accessibility", "linux", "screen-reader"]
license                = "Apache-2.0 OR MIT"
name                   = "atspi-connection"
readme                 = "README.md"
repository             = "https://github.com/odilia-app/atspi/"
rust-version.workspace = true
version                = "0.11.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default  = ["p2p", "wrappers"]
p2p      = ["dep:futures-lite", "zbus/p2p"]
tracing  = ["dep:tracing"]
wrappers = ["atspi-common/wrappers", "dep:futures-lite"]

[dependencies]
atspi-common   = { path = "../atspi-common/", version = "0.11.0", default-features = false, features = ["zbus"] }
atspi-proxies  = { path = "../atspi-proxies/", version = "0.11.0" }
futures-lite   = { version = "2.6.0", default-features = false, optional = true }
tracing        = { optional = true, workspace = true }
zbus.workspace = true

[dev-dependencies]
enumflags2.workspace = true
tokio-test           = "0.4.2"
