[package]
name = "atspi-macros"
version = "0.3.0"
edition = "2021"
authors = ["Luuk van der Duim <luukvanderduim@gmail.com>", "Tait Hoyem <tait@tait.tech>"]
description = "Macros to assist in various impl blocks for the `atspi` crate."
license = "MIT"
readme = "README.md"
repository = "https://github.com/odilia-app/atspi"
keywords = ["macros", "helper"]

[lib]
proc_macro = true

[features]
unstable_atspi_proxy_codegen = ["dep:zbus", "dep:zvariant"]

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "fold", "full"] }
quote = "1.0.21"
zbus = { version = "3.0.0", default-features = false, features = ["xml", "tokio"], optional = true }
zvariant = { version = "3.9.0", optional = true }
serde = "1.0"
proc-macro-crate = "1.2.1"
regex = "1.6.0"
