[package]
name = "atspi-macros"
version = "0.4.0"
edition = "2021"
authors = ["Luuk van der Duim <luukvanderduim@gmail.com>", "Tait Hoyem <tait@tait.tech>"]
description = "Macros to assist in various impl blocks for the `atspi` crate."
license = "MIT"
readme = "README.md"
repository = "https://github.com/odilia-app/atspi"
keywords = ["macros", "helper"]

[lib]
proc_macro = true

[features]
default = []
unstable_atspi_proxy_macro = ["dep:proc-macro2", "dep:proc-macro-crate"]
tokio = ["zbus/tokio"]
async-io = ["zbus/async-io"]

[dependencies]
# required dependencies
syn = { version = "1.0", features = ["extra-traits", "fold", "full"] }
quote = "1.0.21"
# optional dependencies
proc-macro2 = { version = "1.0", optional = true }
zbus.workspace = true
serde.workspace = true
proc-macro-crate = { version = "1.2.1", optional = true }
regex = "1.6.0"
