[package]
name = "atspi-macros"
version = "0.4.0"
edition = "2021"
authors = ["Luuk van der Duim <luukvanderduim@gmail.com>", "Tait Hoyem <tait@tait.tech>"]
description = "Macros to assist in various impl blocks for the `atspi` crate."
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/odilia-app/atspi"
keywords = ["macros", "helper"]
categories = ["macros"]

[lib]
proc_macro = true

[features]
default = []
unstable_atspi_proxy_macro = ["dep:zbus", "dep:zvariant", "dep:proc-macro2", "dep:serde", "dep:proc-macro-crate"]
zbus = ["dep:zbus"]
tokio = ["zbus/tokio"]
async-io = ["zbus/async-io"]

[dependencies]
# required dependencies
syn = { version = "1.0", features = ["extra-traits", "fold", "full"] }
quote = "1.0.21"
# optional dependencies
proc-macro2 = { version = "1.0", optional = true }
zbus = { workspace = true, features = ["xml"], optional = true }
zvariant = { version = "3.9.0", optional = true }
serde = { version = "1.0", optional = true }
proc-macro-crate = { version = "1.2.1", optional = true }
regex = "1.6.0"
