[package]
name = "atspi-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
zbus-tokio = ["zbus/tokio"]
zbus-async-io = ["zbus/async-io"]

[dependencies]
serde = "1.0.162"
zbus_names = "2.5.0"
zvariant = "3.12.0"
enumflags2 = "0.7.7"
zbus = { version = "3.12", optional = true }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["macros", "time", "rt-multi-thread"] }
zbus = "3.12"
byteorder = "1.4.3"
futures-lite = "1.13.0"
atspi = { path = "../atspi/" }
tokio-stream = "0.1.14"
