[package]
  authors.workspace      = true
  categories             = [ "accessibility", "api-bindings" ]
  description            = "Pure-Rust, zbus-based AT-SPI2 protocol implementation."
  edition                = "2021"
  homepage               = "https://github.com/odilia-app/atspi"
  include                = [ "LICENSE-*", "README.md", "src/**/*" ]
  keywords               = [ "a11y", "accessibility", "linux", "screen-reader", "tts" ]
  license                = "Apache-2.0 OR MIT"
  name                   = "atspi"
  readme                 = "../README.md"
  repository             = "https://github.com/odilia-app/atspi"
  rust-version.workspace = true
  version                = "0.25.0"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async-std"]
async-std = ["atspi-proxies/async-std", "atspi-connection/async-std", "zbus/async-io"]
tokio = ["atspi-proxies/tokio", "atspi-connection/tokio", "zbus/tokio"]
tracing = ["atspi-connection/tracing"]

[dependencies]
  atspi-common     = { path = "../atspi-common", version = "0.9.0", default-features = false }
  atspi-connection = { path = "../atspi-connection", version = "0.9.0", default-features = false }
  atspi-proxies    = { path = "../atspi-proxies", version = "0.9.0", default-features = false }
  zbus             = { workspace = true, default-features = false, optional = true }

[[bench]]
  harness = false
  name    = "event_parsing"
  path    = "./benches/event_parsing.rs"

[[bench]]
  harness = false
  name    = "event_parsing_100k"
  path    = "./benches/event_parsing_100k.rs"

[[example]]
  name              = "tree"
  path              = "./examples/bus-tree.rs"
  required-features = [ "tokio" ]

[[example]]
  name              = "focused-tokio"
  path              = "./examples/focused-tokio.rs"
  required-features = [ "tokio" ]

[[example]]
  name              = "focused-async-std"
  path              = "./examples/focused-async-std.rs"
  required-features = [ "async-std" ]

[dev-dependencies]
  async-std      = { version = "1.12", default-features = false }
  atspi          = { path = "." }
  criterion      = "0.5"
  fastrand       = "2.0"
  futures        = { version = "0.3", default-features = false, features = [ "alloc" ] }
  futures-lite   = { version = "2", default-features = false }
  tokio          = { version = "1", default-features = false, features = [ "macros", "rt-multi-thread" ] }
  tokio-stream   = "0.1"
  zbus.workspace = true
